--- a/README
+++ b/README
@@ -1,1 +1,51 @@
-mod_radar
+:: mod_radar ::
+
+What is it ?
+------------
+
+mod_radar is an Apache 2 diagnostic and monitoring module.  It allows 
+adminstrators to see what http request an httpd process is currently 
+processing, giving a real-time view of the Apache server.
+
+The Latest Version
+------------------
+
+Details of the latest version can always be found on GitHub, under the
+mod_radar project page: https://github.com/DougBridgens/mod_radar/.
+
+Documentation
+-------------
+
+Please see the file called mod_radar.README
+
+Installation
+------------
+
+Please see the file called INSTALL.
+
+Licensing
+---------
+
+Please see the file called LICENSE.
+
+Contacts
+--------
+
+If you want to be informed about new code releases, bug fixes, security
+fixes, general news and information about mod_radar, please follow the
+author at these locations:
+
+https://github.com/DougBridgens
+https://twitter.com/SoogateLtd
+
+If you would like commercial support or enhancements for mod_radar,
+please contact the author at these locations:
+
+mailto: doug.bridgens@soogate.com
+https://github.com/DougBridgens
+https://twitter.com/SoogateLtd
+
+If you have a concrete bug report for mod_radar, please use the reporting
+tools available at:
+
+https://github.com/DougBridgens/mod_radar
